--- a/Todos/app/src/main/res/layout/activity_task.xml
+++ b/Todos/app/src/main/res/layout/activity_task.xml
@@ -131,7 +131,7 @@
         android:layout_marginBottom="16dp">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/timEdt"
+            android:id="@+id/timeEdt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Set Time"
